--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,7 @@
         "symfony/framework-bundle": "^3.0",
         "padraic/phar-updater": "^1.0",
         "paysera/lib-dependency-injection": "^1.1",
-        "doctrine/common": "^2.10",
+        "doctrine/common": "~2.7.3",
         "incenteev/composer-parameter-handler": "^2.1"
     },
     "require-dev": {
